--- a/src/metoffice-report/references.bib
+++ b/src/metoffice-report/references.bib
@@ -87,6 +87,25 @@
 @STRING{WF        = "Wea.\ Forecasting"}
 @STRING{WMOB      = "WMO Bull."}
 
+@article{adcroft2013,
+	title={Representation of topography by porous barriers and objective interpolation of topographic data},
+	author={Adcroft, Alistair},
+	journal={Ocean Modelling},
+	volume={67},
+	pages={13--27},
+	year={2013},
+	publisher={Elsevier}
+}
+
+@article{gohm2004,
+	title={South foehn in the Wipp Valley on 24 October 1999 (MAP IOP 10): Verification of high-resolution numerical simulations with observations},
+	author={Gohm, Alexander and Z{\"a}ngl, G{\"u}nther and Mayr, Georg J},
+	journal=MWR,
+	volume={132},
+	pages={78--102},
+	year={2004}
+}
+
 @article{klemp2011,
 	title={A terrain-following coordinate with smoothed coordinate surfaces},
 	author={Klemp, Joseph B},
