--- a/src/metoffice-report/references.bib
+++ b/src/metoffice-report/references.bib
@@ -98,7 +98,7 @@
 }
 
 @article{gohm2004,
-	title={South foehn in the Wipp Valley on 24 October 1999 (MAP IOP 10): Verification of high-resolution numerical simulations with observations},
+	title={South foehn in the {W}ipp {V}alley on 24 {O}ctober 1999 ({MAP IOP} 10): Verification of high-resolution numerical simulations with observations},
 	author={Gohm, Alexander and Z{\"a}ngl, G{\"u}nther and Mayr, Georg J},
 	journal=MWR,
 	volume={132},
