add thermalAdvection colour bar

--- a/src/metoffice-report/metoffice-report.tex
+++ b/src/metoffice-report/metoffice-report.tex
@@ -95,7 +95,8 @@ Following \citet{schaer2002}, gravity waves are induced by flow of over orograph
 
 \begin{figure}
 	\centering
-	\includegraphics[width=3.5in]{tracerDiffMountain.pdf}
+	\includegraphics[width=3.5in]{tracerDiffMountain.pdf} \\
+	\includegraphics[height=3.5in,angle=270]{tracerDiffMountain_T_diff.eps}
 %
 	\caption{Error in tracer density in the thermal advection test at a resolution of $\Delta z = \SI{50}{\meter}$ on the cut cell grid.  Errors are generated near mountainous terrain and are advected horizontally on the lee side.  Contours in tracer density are overlayed.  Axes are in units of \si{\meter}.}
 	\label{fig:thermalAdvection}
