add final sample line

--- a/src/metoffice-report/metoffice-report.tex
+++ b/src/metoffice-report/metoffice-report.tex
@@ -16,8 +16,6 @@
 \usepackage{xcolor}
 \PassOptionsToPackage{final}{graphicx}
 
-\newcommand{\TODO}[1]{\textcolor{purple}{TODO: \emph{#1}}}
-
 \title{Numerical representation of mountains in atmospheric models}
 \author{James Shaw}
 
@@ -85,7 +83,7 @@ Figure~\ref{fig:resting} shows the maximum spurious vertical velocities induced 
 	\footnotesize
 	\input{../gravityWaves-diagnostics/sampleLine}
 %
-	\caption{Vertical profiles of potential temperature differences between the start and end of the gravity waves test on (a) the TF grid, and (b) the cut cell grid.  Results are compared with thermal advection tests results, showing differences in tracer density between the numeric and analytic solutions at the end of integration on (c) the TF grid, and (d) the cut cell grid.  The results are convergent, except for errors found in the lowest layers on the cut cell grids.  \TODO{add GW cut cell dz=50m once the test has completed}}
+	\caption{Vertical profiles of potential temperature differences between the start and end of the gravity waves test on (a) the TF grid, and (b) the cut cell grid.  Results are compared with thermal advection tests results, showing differences in tracer density between the numeric and analytic solutions at the end of integration on (c) the TF grid, and (d) the cut cell grid.  The results are convergent, except for errors found in the lowest layers on the cut cell grids.}
 	\label{fig:gw-sampleLine}
 \end{figure}
 
